--- a/src/styles.scss
+++ b/src/styles.scss
@@ -216,29 +216,42 @@ nav .search-icon {
   background-color: #171c24;
   border-radius: 999em;
 }
-.search-input {
-  // width: 30%;
-  min-width: 350px;
+
+.alert {
+  font-size: 15px;
+  width: 100%;
+  padding: 10px;
+  margin: 0 0 15px;
+  text-align: start;
+  border-radius: 10px;
+  /* margin: 10px; */
+  animation: horizontal-shaking 0.35s ease-in;
+  &.error {
+    color: #b91c1c;
+    background: #fef2f2;
+    border: 1px solid #b91c1c;
+  }
+  &.success {
+    color: green;
+    background: #0080001a;
+    border: 1px solid green;
+  }
+}
+
+input {
   padding: 12px 24px;
 
   background-color: transparent;
   transition: transform 250ms ease-in-out;
   font-size: 14px;
   line-height: 18px;
-
   color: #171c24;
   background-color: transparent;
-
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-size: 18px 18px;
-  background-position: 95% center;
   border-radius: 10px;
   border: 1px solid #171c24;
   transition: all 250ms ease-in-out;
   backface-visibility: hidden;
   transform-style: preserve-3d;
-
   &::placeholder {
     color: color(#171c24 a(0.8));
     text-transform: uppercase;
@@ -254,6 +267,16 @@ nav .search-icon {
     border-radius: 0;
     background-position: 100% center;
   }
+}
+
+.search-input {
+  // width: 30%;
+  min-width: 350px;
+
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-size: 18px 18px;
+  background-position: 95% center;
 }
 .sort-select {
   padding: 12px 24px;
@@ -512,5 +535,100 @@ nav .search-icon {
   }
   100% {
     background-color: hsl(200, 20%, 95%);
+  }
+}
+
+.login-page {
+  background: #171c24;
+  padding: 8% 0 0;
+  height: 100vh;
+  margin: auto;
+  .section-title {
+    margin-bottom: 20px;
+  }
+  .form {
+    position: relative;
+    background: #ffffff;
+    max-width: 360px;
+    margin: 0 auto 100px;
+    padding: 45px;
+    border-radius: 16px;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    text-align: center;
+    max-width: 360px;
+    input {
+      width: 100%;
+      margin: 15px 0 0px;
+      // padding: 15px;
+      // box-sizing: border-box;
+      // font-size: 14px;
+      background-repeat: no-repeat;
+      background-size: 18px 18px;
+      background-position: 95% center;
+      &[type="email"] {
+        background-image: url("data:image/svg+xml;charset=UTF-8,%3c?xml version='1.0' encoding='utf-8'?%3e%3c!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools --%3e%3csvg fill='%23000000' height='800px' width='800px' version='1.1' id='Icons' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 32 32' xml:space='preserve'%3e%3cpath d='M26.2,8.5c-2.2-3.2-5.6-5.2-9.3-5.5c-0.3,0-0.6,0-0.9,0c-3.7,0-7.2,1.6-9.7,4.3c-2.5,2.7-3.6,6.4-3.2,10.1 c0.7,6,5.5,10.8,11.5,11.4C15,29,15.5,29,16,29c2.6,0,5-0.7,7.2-2.2c0.5-0.3,0.6-0.9,0.3-1.4c-0.3-0.5-0.9-0.6-1.4-0.3 c-2.2,1.4-4.7,2.1-7.3,1.8c-5.1-0.5-9.1-4.6-9.7-9.7C4.7,14.1,5.7,11,7.8,8.7c2.3-2.5,5.6-3.9,9-3.6c3.2,0.2,6,1.9,7.8,4.6 c1.9,2.9,2.4,6.3,1.3,9.6l0,0.1c-0.3,1-1.3,1.7-2.4,1.7c-1.4,0-2.5-1.1-2.5-2.5V17v-2v-4c0-0.6-0.4-1-1-1s-1,0.4-1,1v0 c-0.8-0.6-1.9-1-3-1c-2.8,0-5,2.2-5,5v2c0,2.8,2.2,5,5,5c1.4,0,2.6-0.6,3.5-1.4c0.7,1.4,2.2,2.4,4,2.4c1.9,0,3.6-1.2,4.3-3.1l0-0.1 C29.1,16,28.5,11.9,26.2,8.5z M19,17c0,1.7-1.3,3-3,3s-3-1.3-3-3v-2c0-1.7,1.3-3,3-3s3,1.3,3,3V17z'/%3e%3c/svg%3e");
+      }
+      &[type="password"] {
+        background-image: url("data:image/svg+xml;charset=UTF-8,%3c?xml version='1.0' encoding='utf-8'?%3e%3c!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools --%3e%3csvg width='800px' height='800px' viewBox='0 0 48 48' xmlns='http://www.w3.org/2000/svg'%3e%3cdefs%3e%3cstyle%3e.a%7bfill:none;stroke:%23000000;stroke-linecap:round;stroke-linejoin:round;%7d%3c/style%3e%3c/defs%3e%3cpath class='a' d='M24,25.28a3.26,3.26,0,0,0-1.64,6.07V36h3.32V31.35a3.28,3.28,0,0,0,1.61-2.8v0A3.27,3.27,0,0,0,24,25.28Z'/%3e%3crect class='a' x='7.38' y='17.77' width='33.23' height='25.73' rx='4.32'/%3e%3cpath class='a' d='M13.35,17.77V15.16a10.66,10.66,0,0,1,21.32,0v2.61'/%3e%3c/svg%3e");
+      }
+      &[type="text"] {
+        background-image: url("data:image/svg+xml;charset=UTF-8,%3c?xml version='1.0' encoding='utf-8'?%3e%3c!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools --%3e%3csvg fill='%23000000' width='800px' height='800px' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3e%3cg id='User'%3e%3cg%3e%3cpath d='M17.438,21.937H6.562a2.5,2.5,0,0,1-2.5-2.5V18.61c0-3.969,3.561-7.2,7.938-7.2s7.938,3.229,7.938,7.2v.827A2.5,2.5,0,0,1,17.438,21.937ZM12,12.412c-3.826,0-6.938,2.78-6.938,6.2v.827a1.5,1.5,0,0,0,1.5,1.5H17.438a1.5,1.5,0,0,0,1.5-1.5V18.61C18.938,15.192,15.826,12.412,12,12.412Z'/%3e%3cpath d='M12,9.911a3.924,3.924,0,1,1,3.923-3.924A3.927,3.927,0,0,1,12,9.911Zm0-6.847a2.924,2.924,0,1,0,2.923,2.923A2.926,2.926,0,0,0,12,3.064Z'/%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
+      }
+    }
+    .error-message {
+      font-size: 10px;
+      text-align: start;
+      margin: 5px;
+      color: red;
+      transform: all 1s ease-in-out;
+    }
+    .message {
+      font-size: 12px;
+      margin-top: 19px;
+      span {
+        cursor: pointer;
+        // color: #171c24;
+        font-weight: bold;
+      }
+    }
+    button {
+      font-family: "Roboto", sans-serif;
+      cursor: pointer;
+      background: #171c24;
+      width: 100%;
+      border: 0;
+      border-radius: 10px;
+      margin-top: 15px;
+      padding: 15px;
+      color: #ffffff;
+      font-size: 14px;
+    }
+  }
+}
+
+.logout {
+  color: #171c24;
+  padding: 4px 10px;
+  font-size: 12px;
+  border-radius: 3px;
+  outline: none;
+  background: #fff;
+  border: none;
+}
+@keyframes horizontal-shaking {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(5px);
+  }
+  50% {
+    transform: translateX(-5px);
+  }
+  75% {
+    transform: translateX(5px);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
