--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,6 +45,7 @@ nav .nav-items li a {
   font-size: 18px;
   font-weight: 500;
   text-decoration: none;
+  cursor: pointer;
 }
 nav .nav-items li a:hover {
   color: #26d63b;
@@ -320,9 +321,9 @@ input {
     .item {
       display: -ms-grid;
       display: grid;
-      margin: 10px 0px;
-      width: 270px;
-      height: 405px;
+      margin: 15px 0px;
+      width: 250px;
+      height: 375px;
       // display: flex;
       // display: -webkit-flex;
       align-items: flex-end;
@@ -612,6 +613,7 @@ input {
   font-size: 12px;
   border-radius: 3px;
   outline: none;
+  cursor: pointer;
   background: #fff;
   border: none;
 }
